--- a/historiabts.html
+++ b/historiabts.html
@@ -21,18 +21,17 @@ header{
     background-image:linear-gradient(to left, #90d1e7f2,#C4EEF2
     ) ;
     min-height: 100px;
-    margin: -10px -10px -1px -8px;
-    padding: 32px 2px 0px 0px;
+    margin: -36px -8px -15px -9px;
+    padding: 29px 0px 0px 0px;
     text-align: center;
-    border-top: 5px;
     border-radius: 5px;
 }
 
 header>h1{
     color: black;
     font-family: 'Lexend Deca', sans-serif;
-    margin: 2px 9px -6px 6px;
-    padding: 5px 5px;
+    margin: 1px 0px -6px -17px;
+    padding: 7px;
 }
 
 header>p{
@@ -43,11 +42,12 @@ header>p{
 
 main{
     background-color: white;
-    padding: 2px 12px 16px 19px;
+    padding: 10px 24px 10px 15px;
     margin: auto;
-    min-width: 300px;
-    max-width: 1111px;
-   border-radius: 10px;
+    margin-top:0px;
+    min-width: 302px;
+    max-width: 1124px;
+   border-radius: 27px;
    }
 
    main h1 {
