--- a/historiabts.html
+++ b/historiabts.html
@@ -21,8 +21,9 @@ header{
     background-image:linear-gradient(to left, #90d1e7f2,#C4EEF2
     ) ;
     min-height: 100px;
-    margin: -36px -8px -15px -9px;
-    padding: 29px 0px 0px 0px;
+    margin: -33px -9px -12px -13px;
+    padding: 27px 0px 0px 0px;
+    font-size: 20px;
     text-align: center;
     border-radius: 5px;
 }
@@ -30,6 +31,7 @@ header{
 header>h1{
     color: black;
     font-family: 'Lexend Deca', sans-serif;
+    font-size: 20px;
     margin: 1px 0px -6px -17px;
     padding: 7px;
 }
@@ -42,7 +44,7 @@ header>p{
 
 main{
     background-color: white;
-    padding: 10px 24px 10px 15px;
+    padding:0px 25px 20px 20px;
     margin: auto;
     margin-top:0px;
     min-width: 302px;
