--- a/pagbts.html
+++ b/pagbts.html
@@ -16,7 +16,7 @@
         <a href="historiabts.html">HISTÓRIA</a>
         <a href="membrosbts.html">MEMBROS</a>
         <a href="#">MVS</a>
-        <a href="#">Canais oficiais</a>
+        <a href="#">Sites Oficiais</a>
     </nav>
 
    </body>
