--- a/pagbts.html
+++ b/pagbts.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Annyeong!</h1>  <!--esse é o h1 princial-->
-        <p>Que bom que você chegou. Fique a vonte para navegar nas seções.</p> <!--usar o class= para mais de uma opção que deseje modificar, desde especifique o nome, então é melhor abrir um <link rel="stylesheet" href="style.css"> para não ficar poluido -->
+        <p>Que bom que você chegou. Navegue nas seções.</p> <!--usar o class= para mais de uma opção que deseje modificar, desde especifique o nome, então é melhor abrir um <link rel="stylesheet" href="style.css"> para não ficar poluido -->
     </header>
     <nav>
         <a href="historiabts.html">HISTÓRIA</a>
