--- a/membrosbts.html
+++ b/membrosbts.html
@@ -142,6 +142,6 @@ header{
         </article>
     </main>
 
-         <p><a href="pagbts.html" rel="prev">Voltar</a></p>
+         <p style="text-align: center;" ><a href="pagbts.html" rel="prev">Voltar</a></p>
 </body>
 </html>
